about_us/about_us.css
/************/
/*font style*/
/************/

/*不確定為什麼，不可以有import 字體，下面這個字體會出不來*/
@font-face
{
  font-family: jf-openhuninn;
  src: url("./file/jf-openhuninn-1.1.ttf") format("truetype"),
       url('./fonts/jf-openhuninn-1.1.woff') format("woff"),
       url('./fonts/jf-openhuninn-1.1.eot') format("embedded-opentype");
}


:root
{
    --background_color: #FFFFFF;
    --background_color_card: #E8E8E8;
    --fontcolor_header: #181818;
    --fontcolor_text: #000000;
    --font-family-header: "jf-openhuninn";
    --font-style-header: none;
    --font-family-text: "jf-openhuninn";
    --font-style-text: none;
    --font-family-card: "jf-openhuninn";
    --font-style-card: none;
}




/*************/
/*entire area*/
/*************/
*
{
  margin: 0;
  padding: 0;
}


/*background_group photo*/
#background
{
    position: fixed;
    background-color: var(--background_color);
    z-index: -1;
    width: 100%;
    height: 100%;
}
#group-img
{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
    opacity: 1;
    z-index: 0;
    content: url(./file/groupphoto_1.jpg); /* moved the src from html file to here */
}

/********/
/*header*/
/********/

h1
{
    position: static;
    text-align: center;
    color: var(--fontcolor_header);
    font-size: 64px;
    font-weight: 500;
    font-family: var(--font-family-header);
    font-style: var(--font-style-header);
    text-decoration: none;
}


p
{
    /*要怎麼限制在一定的(左右)範圍內？*/
    position: static;
    text-align: center;
    
    color: var(--fontcolor_text);
    font-size: 18px;
    font-weight: 500;
    font-family: var(--font-family-header);
    font-style: var(--font-style-header);
    
    text-decoration: none;
}
/*********/
/*nav_bar*/
/*********/

#navbar
{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100px;
    background-color: var(--background_color);
    border-radius: 0px 0px 50px 50px;
         /*UpLeft/UR/DR/DL*/
    opacity: 0.45;
    z-index: 1;
}

#title{
    font-family: var(--font-family-header);
    font-style: var(--font-style-header);
    font-weight: 500;
    font-size: 64px;
    /*top: 0px;*/
    line-height: 85px;
    color: var(--fontcolor_header);
    margin-left: 5%;
}

/*logo*/

/*button*/
#navbar ul
{
    display:flex;
    justify-content: space-around;
    white-space:nowrap;
    list-style-type:none;
    margin-right: 5%;
}


#navbar li
{
    display: block;
    float:right;
    margin:32px;
    overflow: left;
    white-space: normal;
    word-break: break-all;
    word-wrap: break-word;
    font-size: 36px;
}

/***********/
/*main area*/
/***********/

#gap1
{
    width: 100%;
    height: 5px;
}

#img-cards
{
    
    position: absolute;
    background-color: green;
    /*UL/UR/DR/DL*/
    border-radius: 50px 50px 0px 0px;
    width: 100%;
    top: 80%;
    z-index: 1;
}

#flex-column
{
    display:flex;
    flex-direction: column;
}

.flex-row
{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 3%;
    margin: 3% 0 3% 0;
}


.card
{
    background-color: #FFA511;/*橘色*/
    height: 360px;
    width: 240px;
    left: 10%;
    bottom: 0;
    font-size: 36px;
    
    /*UL/UR/DR/DL*/
    border-radius: 30px 30px 30px 30px;
    opacity: 1;
    z-index: 3;
}

#img-cards .personal-img
{
    background: url("./file/name1.jpg");
    position: relative;
    width: 240px;
    height: auto;
    top: 0;
    left: 0;
    display: none;
}

.card-detail
{
    background-color: #AD15FF;/*紫色*/
    height: 30%;
    width: 100%;
    left: 50%;
    top: 50%;
    bottom: 0px;
    
    /*UL/UR/DR/DL*/
    border-radius: 30px 30px 30px 30px;
    opacity: 0.7;
    z-index: 4;
}

.card-detail *
{
    font-size: 36px;
    text-align: left;
    color: var(--fontcolor_header);
}

.personal-name
{
    font-size: 36px;
    line-height: 1em;
}

.description
{
    font-size: 18px; /* the font size is soooo weird */
}

